# slate-hermes

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  compose.yml  entrypoint.sh  no-portal-overlay.patch  package.json
firmware/components/xiaozhi-fonts/: CMakeLists.txt
firmware/components/xiaozhi-fonts/include/: font_awesome.h
firmware/components/xiaozhi-fonts/src/: font_awesome_14_1.c  font_awesome_30_1.c
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cc
firmware/main/app/: app.cc  app.h  board.cc  board.h  boot_mode.cc  boot_mode.h  combo_key.cc  combo_key.h  event_bus.cc  event_bus.h  power_state.cc  power_state.h  scene.cc  scene.h  scene_stack.cc  scene_stack.h  setup_flow.cc  setup_flow.h  shutdown_subsystems.cc  shutdown_subsystems.h  sleep_manager.cc  sleep_manager.h  system_restart.cc  system_restart.h  time_tick.cc  time_tick.h
firmware/main/audio/: audio_player.cc  audio_player.h  volume_store.cc  volume_store.h
firmware/main/bsp/: battery_adc.cc  battery_adc.h  board.cc  board.h  board_power.cc  board_power.h  charge_status.cc  charge_status.h  config.h  gpio_util.h
firmware/main/chat/: xiaozhi_audio_service.cc  xiaozhi_audio_service.h  xiaozhi_chat_service.cc  xiaozhi_chat_service.h  xiaozhi_config_client.cc  xiaozhi_config_client.h  xiaozhi_mqtt_protocol.cc  xiaozhi_mqtt_protocol.h  xiaozhi_protocol.cc  xiaozhi_protocol.h  xiaozhi_settings.cc  xiaozhi_settings.h  xiaozhi_websocket_protocol.cc  xiaozhi_websocket_protocol.h
firmware/main/chat/config/: xiaozhi_config_client.cc  xiaozhi_config_client.h  xiaozhi_settings.cc
firmware/main/chat/mcp/: mcp_dispatcher.cc  mcp_dispatcher.h  mcp_tools.cc  mcp_tools.h
firmware/main/chat/protocol/: audio_stream_packet.cc  xiaozhi_protocol.cc  xiaozhi_protocol.h  xiaozhi_websocket_protocol.cc  xiaozhi_websocket_protocol.h
firmware/main/chat/service/: xiaozhi_audio_service.cc  xiaozhi_audio_service.h  xiaozhi_chat_service.cc  xiaozhi_chat_service.h  xiaozhi_message_handler.cc  xiaozhi_message_handler.h
firmware/main/display/: epd_ssd1683.cc  epd_ssd1683.h
firmware/main/drivers/: button.cc  button.h  charge_status.cc  charge_status.h  i2c_bus_lock.cc  i2c_device.cc  i2c_device.h
firmware/main/drivers/audio/: audio_player.cc  audio_player.h  volume_store.cc  volume_store.h
firmware/main/drivers/bus/: i2c_bus_lock.cc  i2c_bus_lock.h  i2c_device.cc  i2c_device.h  i2c_power_hook.cc
firmware/main/drivers/display/: epd_ssd1683.cc  epd_ssd1683.h  epd_ssd1683_commands.cc  epd_ssd1683_spi.cc  epd_utils.cc  epd_utils.h  framebuffer_ops.cc  framebuffer_ops.h
firmware/main/drivers/input/: button.cc  button.h  up_down_combo.cc  up_down_combo.h
firmware/main/drivers/power/: charge_status.cc  charge_status.h
firmware/main/events/: boot_stage.h  event_bus.cc  event_bus.h  group_sync_status.h  ui_event.h  ui_event_log.cc  ui_event_log.h
firmware/main/fonts/: FusionPixel_12.c  SourceHanSansSC_Regular_slim.c
firmware/main/hal/: board_power.cc  board_power.h  button.cc  button.h  charge_status.cc  config.h  i2c_device.cc
firmware/main/hermes/: hermes_service.cc  hermes_service.h
firmware/main/net/: api_client.cc  api_client.h  captive_portal.cc  captive_portal.h  captive_portal_html.h  cred_store.cc  cred_store.h  dns_hijack.cc  dns_hijack.h  poll_interval_store.h  sntp.cc  sntp.h  sync_service.cc  sync_service.h  wifi.cc  wifi.h
firmware/main/network/: captive_portal.cc  captive_portal.h  cred_store.cc  cred_store.h  dns_hijack.cc  dns_hijack.h  sntp.cc  sntp.h  wifi.cc  wifi.h  wifi_internal.cc  wifi_internal.h  wifi_modes.cc  wifi_reconnect.cc  wifi_reconnect_manager.cc  wifi_reconnect_manager.h
firmware/main/power/: minute_boundary_ticker.cc  minute_boundary_ticker.h  minute_tick.cc  minute_tick.h  power_state.cc  power_state.h  shutdown.cc  shutdown.h  shutdown_subsystems.cc  shutdown_subsystems.h  sleep_manager.cc  sleep_manager.h  system_restart.cc  system_restart.h
firmware/main/protocol/: api_client.cc  api_client.h  poll_interval_store.cc  protocol_keys.h  sync_service.cc  sync_service.h
firmware/main/resources/: captive_portal_html.cc  captive_portal_html.h
firmware/main/resources/fonts/: zfull_12.c
firmware/main/scenes/: boot_splash_scene.cc  boot_splash_scene.h  data_sync_page.cc  data_sync_page.h  device_info_page.cc  device_info_page.h  factory_reset_page.cc  factory_reset_page.h  font_demo_page.cc  font_demo_page.h  frame_scene.cc  frame_scene.h  poll_interval_page.cc  poll_interval_page.h  restart_device_page.cc  restart_device_page.h  settings_scene.cc  settings_scene.h  volume_page.cc  volume_page.h
firmware/main/scenes/bg_refresh/: bg_refresh_scene.cc  bg_refresh_scene.h
firmware/main/scenes/boot/: boot_splash_scene.cc  boot_splash_scene.h
firmware/main/scenes/chat/: chat_scene.cc  chat_scene.h
firmware/main/scenes/core/: scene.cc  scene.h  scene_stack.cc  scene_stack.h
firmware/main/scenes/frame/: frame_scene.cc  frame_scene.h
firmware/main/scenes/hermes/: hermes_scene.cc  hermes_scene.h
firmware/main/scenes/settings/: confirm_action_page.cc  confirm_action_page.h  data_sync_page.cc  data_sync_page.h  device_info_page.cc  device_info_page.h  factory_reset_page.cc  factory_reset_page.h  poll_interval_page.cc  poll_interval_page.h  restart_device_page.cc  restart_device_page.h  settings_page_base.cc  settings_page_base.h  settings_pages.cc  settings_pages.h  (+4 more)
firmware/main/startup/: boot_mode.cc  boot_mode.h  setup_flow.cc  setup_flow.h
firmware/main/storage/: cache.cc  cache.h  cache_staging.cc  cache_staging.h  nvs_schema.h  nvs_store.cc  nvs_store.h
firmware/main/sync/: api_client.cc  api_client.h  sync_internal.cc  sync_internal.h  sync_manifest.cc  sync_poll.cc  sync_service.cc  sync_service.h
firmware/main/ui/: frame_view.cc  frame_view.h  menu_list.cc  menu_list.h  scrollbar.h  status_bar.cc  status_bar.h  theme.h
firmware/main/utils/: byte_utils.h  json_utils.h  mac_utils.h  scoped_mutex_lock.h  time_utils.h  utf8_utils.h
(+914 files in other folders)
